💄  fixed height for book covers on homepage

--- a/Front/src/components/Home/News/styles.scss
+++ b/Front/src/components/Home/News/styles.scss
@@ -43,6 +43,7 @@
 
 .home-bookselection__book {
   width: 150px;
+  height: 200px;
   margin-bottom: 1rem;
 }
  .home-bookselection__book:hover {
